tests/predator-regre/test-0186.err
test-0186.c:3: error: error label "ERROR" has been reached
test-0186.c:34: note: from call of error ()
test-0186.c:33: note: _ = (i != (int)1) ... evaluated as TRUE
test-0186.c:28: note: _ = (i == (int)0) ... evaluated as FALSE
test-0186.c:51: note: from call of gl_write (gl_num, (int)65)
test-0186.c:46: note: _ = (gl_mloop <= gl_cnt) ... evaluated as FALSE
test-0186.c:123: note: from call of gl_proc1 ()
test-0186.c:121: note: _ = (_ != (int)0) ... assuming TRUE
test-0186.c:121: note: _ = (gl_st1 == (int)0) ... evaluated as TRUE
test-0186.c:120: note: _ = (_ != (int)0) ... evaluated as TRUE
test-0186.c:115: note: _ = (gl_st1 == (int)0) ... evaluated as TRUE
test-0186.c:120: note: from call of _ = gl_runnable ()
test-0186.c:82: note: _ = (gl_num == (int)0) ... evaluated as TRUE
test-0186.c:82: note: _ = (gl_cnt < gl_mloop) ... evaluated as TRUE
test-0186.c:70: note: _ = (gl_num != (int)0) ... evaluated as FALSE
test-0186.c:70: note: _ = (gl_cnt < gl_mloop) ... evaluated as TRUE
test-0186.c:70: note: _ = (gl_pc2 == (int)1) ... evaluated as FALSE
test-0186.c:128: note: from call of gl_proc2 ()
test-0186.c:126: note: _ = (_ != (int)0) ... assuming TRUE
test-0186.c:126: note: _ = (gl_st2 == (int)0) ... evaluated as TRUE
test-0186.c:121: note: _ = (_ != (int)0) ... assuming FALSE
test-0186.c:121: note: _ = (gl_st1 == (int)0) ... evaluated as TRUE
test-0186.c:120: note: _ = (_ != (int)0) ... evaluated as TRUE
test-0186.c:115: note: _ = (gl_st1 == (int)0) ... evaluated as TRUE
test-0186.c:120: note: from call of _ = gl_runnable ()
test-0186.c:172: note: from call of gl_eval ()
test-0186.c:153: note: _ = (_ != (int)0) ... evaluated as FALSE
test-0186.c:96: note: _ = (gl_pc2 == (int)2) ... evaluated as FALSE
test-0186.c:96: note: _ = (gl_pc2 == (int)1) ... evaluated as FALSE
test-0186.c:153: note: from call of _ = gl_trig2 ()
test-0186.c:150: note: _ = (_ != (int)0) ... evaluated as FALSE
test-0186.c:60: note: _ = (gl_pc1 == (int)1) ... evaluated as FALSE
test-0186.c:150: note: from call of _ = gl_trig1 ()
test-0186.c:169: note: from call of gl_activate ()
test-0186.c:106: note: _ = (gl_i2 == (int)1) ... evaluated as TRUE
test-0186.c:101: note: _ = (gl_i1 == (int)1) ... evaluated as TRUE
test-0186.c:168: note: from call of gl_init ()
test-0186.c:157: note: from call of main ()
test-0186.c:157: warning: symbolic execution terminates prematurely
test-0186.c:157: note: an error label has been reached
